Fix line number wrapping
Fix %e5EjdcjIRf+guSHuxZlERuuIXdbkFA9ffbAQT+2jEdg=.sha256

--- a/static/styles.css
+++ b/static/styles.css
@@ -436,6 +436,7 @@ h3 .user-id {
   text-align: right;
   color: grey;
   border-right: 1px solid rgba(0, 0, 0, 0.06);
+  white-space: nowrap;
 }
 
 .code-linenum a {
